force-app/main/default/objects/OA_Campaign_Settings__c/OA_Campaign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls daily send volume and cap for OA outreach campaigns.</description>
    <label>OA Campaign Settings</label>
</CustomObject>