force-app/main/default/objects/OA_Campaign_Settings__c/fields/Cap_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Cap_Reset_Date__c</fullName>
    <description>Date the Sends_Today counter was last reset. OA_SendGovernor resets when this differs from today.</description>
    <label>Cap Reset Date</label>
    <type>Date</type>
</CustomField>