force-app/main/default/objects/OA_Campaign_Settings__c/fields/Daily_Send_Cap__c.field-meta.xml
<CustomField>
    <fullName>Daily_Send_Cap__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Maximum total emails per business day. Controls DripScheduler batch size and FollowUpScheduler LIMIT.</description>
    <label>Daily Send Cap</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>