force-app/main/default/objects/OA_Campaign_Settings__c/fields/Sends_Today__c.field-meta.xml
<CustomField>
    <fullName>Sends_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Running count of emails sent today. Reset daily by OA_SendGovernor.</description>
    <label>Sends Today</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>